2007-12-06 13:55:06  Tim Janik  <timj@imendio.com>

	* Makefile.decl: replaced seq(1) invokation for X11 ids with a hardcoded
	set of likely unused display ids, because MacOS has no seq(1) command.

2007-12-06  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c:
	(synthesize_crossing_events_for_ns_event): Fix warning when
	switching spaces in leopard.

2007-12-06 13:38:36  Tim Janik  <timj@imendio.com>

	* tests/floatingtest.c: ported to new testing framework.

	* tests/Makefile.am: run floatingtest as testing framework test.

2007-12-06 10:44:52  Tim Janik  <timj@imendio.com>

	* tests/autotestfilechooser.c: majorly speed up execution by reducing
	timeouts and converting main loop sleeps to pending/iterate loops with
	very low priority async handlers. eliminate output for non-verbose
	tests. assert successfull subtests in all test functions. use testing
	framework in main().

	* tests/Makefile.am: add autotestfilechooser to TEST_PROGS, so it's
	executed inside Xvfb upon make check.

2007-12-06 08:23:38  Tim Janik  <timj@imendio.com>

	* tests/objecttests.c: use string comparisons for string property
	values and get rid of referencing symbols in array initialization.

2007-12-05 18:59:59  Tim Janik  <timj@imendio.com>

	* gtk+/Makefile.decl: run tests in current dir after setting up the
	logging directory, so their results get properly merged into the
	resulting test log.

	* gtk+/gtk/gtktestutils.[hc]: added gtk_test_list_all_types() for
	tests to loop over registered Gdk/Gtk+ types.

	* gtk+/tests/objecttests.c: new test program, implements automated
	property tests. several properties are blacklisted because they
	seem to trigger Gdk/Gtk+ bugs. ./objecttests -m thorough --verbose
	can be used to test blacklisted properties and see which proprty failed.

2007-12-04  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c: (_gdk_windowing_window_init):
	Fully initialize the root window, fixes bug #501583.
